HealthPlanetのキー用クラス追加

--- a/PostDietProgress/local.settings.json.sample
+++ b/PostDietProgress/local.settings.json.sample
@@ -11,6 +11,8 @@
     "CosmosDbOptions:PartitionKey": "/partitionKey",
     "CosmosDbOptions:SettingContainerId": "Setting",
     "CosmosDbOptions:DietDataContainerId": "DietData",
-    "CosmosDbOptions:DietDataTimeToLive": 31536000
+    "CosmosDbOptions:DietDataTimeToLive": 31536000,
+    "HealthPlanetOptions:TanitaClientId": "",
+    "HealthPlanetOptions:TanitaClientSecretToken": ""
   }
 }
