--- a/PostDietProgress/PostDietProgress.csproj
+++ b/PostDietProgress/PostDietProgress.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.3" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.5" />
+    <PackageReference Include="TimeZoneConverter" Version="3.2.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
